PHP Apps in a Subdirectory in Nginx

--- a/nginx/sites/default.conf
+++ b/nginx/sites/default.conf
@@ -4,11 +4,48 @@ server {
     listen [::]:80 default_server ipv6only=on;
 
     server_name localhost;
-    root /var/www/sou-authentication/public;
+    root /var/www;
     index index.php index.html index.htm;
 
     location / {
          try_files $uri $uri/ /index.php$is_args$args;
+    }
+
+    # sou-authentication-api
+    # ------------------------------------- #
+
+    location /sou-authentication-api {
+        alias /var/www/sou-authentication-api/public;
+        try_files $uri $uri/ @sou_authentication;
+
+        location ~ \.php$ {
+            fastcgi_pass php-upstream;
+            fastcgi_param SCRIPT_FILENAME $request_filename;
+            include fastcgi_params;
+        }
+    }
+
+
+    # sou-collaborator-api
+    # ------------------------------------- #
+
+    location /sou-collaborator-api {
+        alias /var/www/sou-collaborator-api/public;
+        try_files $uri $uri/ @sou_collaborator;
+
+        location ~ \.php$ {
+            fastcgi_pass php-upstream;
+            fastcgi_param SCRIPT_FILENAME $request_filename;
+            include fastcgi_params;
+        }
+    }
+
+    location @sou_authentication {
+        rewrite /sou-authentication-api/(.*)$ /sou-authentication-api/index.php?/$1 last;
+    }
+
+    location @sou_collaborator {
+        rewrite /sou-collaborator-api/(.*)$ /sou-collaborator-api/index.php?/$1 last;
     }
 
     location ~ \.php$ {
