Add mysql tables and user definitions for sou tables

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,6 +3,8 @@ worker_processes 4;
 pid /run/nginx.pid;
 daemon off;
 
+load_module "modules/ngx_http_shibboleth_module.so";
+
 events {
   worker_connections  2048;
   multi_accept on;
