--- a/nginx/sites/default.conf
+++ b/nginx/sites/default.conf
@@ -11,6 +11,25 @@ server {
          try_files $uri $uri/ /index.php$is_args$args;
     }
 
+	# sou-contrata
+    # ------------------------------------- #
+
+    location /sou-contrata {
+        alias /var/www/sou-contrata/public;
+        try_files $uri $uri/ @sou_contrata;
+
+        location ~ \.php$ {
+            fastcgi_pass php-upstream;
+            fastcgi_param SCRIPT_FILENAME $request_filename;
+            include fastcgi_params;
+        }
+		
+    }
+	
+    location @sou_contrata {
+        rewrite /sou-contrata/(.*)$ /sou-contrata/index.php?/$1 last;
+    }
+
     # sou-authentication-api
     # ------------------------------------- #
 
@@ -23,8 +42,12 @@ server {
             fastcgi_param SCRIPT_FILENAME $request_filename;
             include fastcgi_params;
         }
+		
     }
-
+	
+    location @sou_authentication {
+        rewrite /sou-authentication-api/(.*)$ /sou-authentication-api/index.php?/$1 last;
+    }
 
     # sou-collaborator-api
     # ------------------------------------- #
@@ -38,10 +61,6 @@ server {
             fastcgi_param SCRIPT_FILENAME $request_filename;
             include fastcgi_params;
         }
-    }
-
-    location @sou_authentication {
-        rewrite /sou-authentication-api/(.*)$ /sou-authentication-api/index.php?/$1 last;
     }
 
     location @sou_collaborator {
