Add default nginx sites (#sou modules)

--- a/nginx/sites/default.conf
+++ b/nginx/sites/default.conf
@@ -49,6 +49,25 @@ server {
         rewrite /sou-authentication-api/(.*)$ /sou-authentication-api/index.php?/$1 last;
     }
 
+    # sou-employment-api
+    # ------------------------------------- #
+
+    location /sou-employment-api {
+        alias /var/www/sou-employment-api/public;
+        try_files $uri $uri/ @sou_employment;
+
+        location ~ \.php$ {
+            fastcgi_pass php-upstream;
+            fastcgi_param SCRIPT_FILENAME $request_filename;
+            include fastcgi_params;
+        }
+		
+    }
+	
+    location @sou_employment {
+        rewrite /sou-employment-api/(.*)$ /sou-employment-api/index.php?/$1 last;
+    }	
+
     # sou-collaborator-api
     # ------------------------------------- #
 
@@ -65,6 +84,120 @@ server {
 
     location @sou_collaborator {
         rewrite /sou-collaborator-api/(.*)$ /sou-collaborator-api/index.php?/$1 last;
+    }
+
+    # sou-group-api
+    # ------------------------------------- #
+
+    location /sou-group-api {
+        alias /var/www/sou-group-api/public;
+        try_files $uri $uri/ @sou_group;
+
+        location ~ \.php$ {
+            fastcgi_pass php-upstream;
+            fastcgi_param SCRIPT_FILENAME $request_filename;
+            include fastcgi_params;
+        }
+		
+    }
+	
+    location @sou_group {
+        rewrite /sou-group-api/(.*)$ /sou-group-api/index.php?/$1 last;
+    }	
+
+    # sou-audit-api
+    # ------------------------------------- #
+
+    location /sou-audit-api {
+        alias /var/www/sou-audit-api/public;
+        try_files $uri $uri/ @sou_audit;
+
+        location ~ \.php$ {
+            fastcgi_pass php-upstream;
+            fastcgi_param SCRIPT_FILENAME $request_filename;
+            include fastcgi_params;
+        }
+		
+    }
+	
+    location @sou_audit {
+        rewrite /sou-audit-api/(.*)$ /sou-audit-api/index.php?/$1 last;
+    }
+
+    # sou-graduation-api
+    # ------------------------------------- #
+
+    location /sou-graduation-api {
+        alias /var/www/sou-graduation-api/public;
+        try_files $uri $uri/ @sou_graduation;
+
+        location ~ \.php$ {
+            fastcgi_pass php-upstream;
+            fastcgi_param SCRIPT_FILENAME $request_filename;
+            include fastcgi_params;
+        }
+		
+    }
+	
+    location @sou_graduation {
+        rewrite /sou-graduation-api/(.*)$ /sou-graduation-api/index.php?/$1 last;
+    }
+
+    # sou-diploma-api
+    # ------------------------------------- #
+
+    location /sou-diploma-api {
+        alias /var/www/sou-diploma-api/public;
+        try_files $uri $uri/ @sou_diploma;
+
+        location ~ \.php$ {
+            fastcgi_pass php-upstream;
+            fastcgi_param SCRIPT_FILENAME $request_filename;
+            include fastcgi_params;
+        }
+		
+    }
+	
+    location @sou_diploma {
+        rewrite /sou-diploma-api/(.*)$ /sou-diploma-api/index.php?/$1 last;
+    }			
+
+    # sou-probation-api
+    # ------------------------------------- #
+
+    location /sou-probation-api {
+        alias /var/www/sou-probation-api/public;
+        try_files $uri $uri/ @sou_probation;
+
+        location ~ \.php$ {
+            fastcgi_pass php-upstream;
+            fastcgi_param SCRIPT_FILENAME $request_filename;
+            include fastcgi_params;
+        }
+		
+    }
+	
+    location @sou_probation {
+        rewrite /sou-probation-api/(.*)$ /sou-probation-api/index.php?/$1 last;
+    }
+
+    # sou-syslog-api
+    # ------------------------------------- #
+
+    location /sou-syslog-api {
+        alias /var/www/sou-syslog-api/public;
+        try_files $uri $uri/ @sou_syslog;
+
+        location ~ \.php$ {
+            fastcgi_pass php-upstream;
+            fastcgi_param SCRIPT_FILENAME $request_filename;
+            include fastcgi_params;
+        }
+		
+    }
+	
+    location @sou_syslog {
+        rewrite /sou-syslog-api/(.*)$ /sou-syslog-api/index.php?/$1 last;
     }
 
     location ~ \.php$ {
